(ui.scss) fixes cropping for holo panel title

--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -14,7 +14,6 @@ $mobile-break: 50rem;
 
   &__header {
     user-select: none;
-    width: 100%;
     height: 30px;
     display: flex;
     padding: 12px 17px;
@@ -31,6 +30,12 @@ $mobile-break: 50rem;
   &__title {
     font-family: Montserrat;
     color: white;
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 100%;
+    box-sizing: border-box;
   }
 }
 
